# osqp

./: .bumpversion.cfg  .clang_complete  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tags1  .travis.yml  .valgrind-suppress.supp  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  Gemfile  LICENSE  Makefile  NOTICE  README.md  _config.yml  appveyor.yml  basic_test_osqp.py  index.html  install.sh  objects.inv  osqp.mk  osqp.py  package.xml  performance_profile_maros.py  quadprog.py  roadmap.md  run_tests.py  search.html  test_reuse_factor.py  tests.py  tests_old.py
algebra/: CMakeLists.txt  lin_alg.c  matrix.c  vector.c
algebra/_common/: csc_math.c  csc_math.h  csc_utils.c  csc_utils.h  kkt.c  kkt.h  reduced_kkt.c  reduced_kkt.h
algebra/bare/: algebra_bare.h  csc.c  csc.h  matrix.c  vector.c
algebra/builtin/: CMakeLists.txt  algebra_impl.h  algebra_libs.c  algebra_memory.h  matrix.c  vector.c
algebra/csc_tools/: CMakeLists.txt  csc_math.c  csc_math.h  csc_utils.c  csc_utils.h
algebra/cuda/: CMakeLists.txt  algebra_libs.c  algebra_libs.cu  algebra_types.h  findAlgebraDependency.cmake.in  matrix.c  matrix.cu  vector.c  vector.cu
algebra/default/: CMakeLists.txt  algebra_impl.h  algebra_libs.c  algebra_types.h  csr_type.h  cuda_configure.h  cuda_csr.cu  cuda_csr.h  cuda_handler.cu  cuda_handler.h  cuda_lin_alg.cu  cuda_lin_alg.h  cuda_malloc.cu  cuda_malloc.h  cuda_wrapper.h  matrix.c  vector.c  vector.cu
algebra/graphblas/: CMakeLists.txt  algebra_impl.h  algebra_libs.c  custom_operators.c  static_items.c  vector.c
algebra/mkl/: CMakeLists.txt  algebra_impl.h  algebra_libs.c  algebra_memory.h  blas_helpers.h  findAlgebraDependency.cmake.in  matrix.c  vector.c
algebra/mklblas/: CMakeLists.txt  algebra_impl.h  algebra_libs.c  matrix.c  vector.c
interfaces/fortran/: .gitignore  CMakeLists.txt  fosqp.h  osqp_f2c.c  osqpf.F90  osqpf_types.F90  runme.bash  runme.csh  test_osqpf.F90
lin_sys/: CMakeLists.txt  LibraryHandler.c  LibraryHandler.h  common.c  common.h  lib_handler.c  lib_handler.h
lin_sys/cuda/: CMakeLists.txt
lin_sys/direct/: CMakeLists.txt  private.c  private.h
lin_sys/indirect/: CMakeLists.txt
lin_sys/kkt_common/: CMakeLists.txt  kkt.c  kkt.h
src/: CMakeLists.txt  aux.c  auxil.c  codegen.c  cs.c  cs_old.c  csc.c  ctrlc.c  derivative.c  differentiate.c  error.c  export_c_data.c  export_c_helpers.c  export_codegen.c  interrupt_matlab.c  interrupt_unix.c  interrupt_windows.c  interrupts.c  kkt.c  lin_alg.c  lin_alg_impl.c  lin_alg_new.c  lin_sys.c  osqp.c  osqp_api.c  osqp_ldl.c  osqp_log.c  polish.c  profiler_nvtx.c  profilers.c  profilers_impl.c  profilers_itt.c  profilers_nvtx.c  profilers_omnitrace.c  profilers_roctx.c  profilers_terminal.c  proj.c  scaling.c  timing_linux.c  timing_macos.c  (+2 more)
tests/: .gitignore  CMakeLists.txt  generate_tests_data.py  minunit.h  osqp_api.h  osqp_catch2_tester.cpp  osqp_tester.c  osqp_tester.cpp  osqp_tester.h  osqp_tester_direct.c  test_catch2.cpp  testenv.yml
tests/CMakeInstallTests/: CMakeLists.txt
tests/basic_lp/: CMakeLists.txt  basic_lp_data.cpp  generate_problem.py  test_basic_lp.cpp  test_basic_lp.h
tests/basic_qp/: CMakeLists.txt  basic_qp.h  basic_qp_data.cpp  generate_mat.jl  generate_problem.py  matrices.h  test_basic_qp.cpp  test_basic_qp.h  test_cuda_io.cpp  test_later_solution.cpp
tests/basic_qp2/: CMakeLists.txt  basic_qp2.h  basic_qp2_data.cpp  generate_problem.py  test_basic_qp2.cpp  test_basic_qp2.h
tests/c/: generate_qptests.py  generate_tests.jl  minunit.h  osqp_tester_direct.c
tests/codegen/: CMakeLists.txt  codegen_data.cpp  generate_problem.py  test_codegen.cpp  test_codegen.h
tests/csc_api/: CMakeLists.txt  test_csc_api.cpp
tests/cuda/: CMakeLists.txt  generate_problem.py  test_cuda_io.cpp  test_cuda_settings.cpp
tests/custom_interrupts/: CMakeLists.txt  custom_interrupts.c  custom_interrupts.h
tests/custom_memory/: CMakeLists.txt  custom_memory.c  custom_memory.h
tests/custom_printing/: CMakeLists.txt  custom_printing.c  custom_printing.h
tests/custom_tictoc/: custom_tictoc.c  custom_tictoc.h
tests/demo/: CMakeLists.txt  test_demo.cpp  test_demo.h
tests/derivative_adjoint/: CMakeLists.txt  generate_problem.py  test_derivative_adjoint.cpp
tests/infeas_qp/: test_infeas_qp.h
tests/infeasibility/: CMakeLists.txt  generate_problem.py  infeasibility.h  test_infeasibility.h
tests/large_qp/: CMakeLists.txt  large_qp_data.c  large_qp_data.h  test_large_qp.cpp
tests/lin_alg/: CMakeLists.txt  generate_mat.jl  generate_problem.py  lin_alg.h  lin_alg_data.cpp  lin_alg_tester.cpp  matrices.h  test_lin_alg.h  test_mat_vec.cpp  test_matrix.cpp  test_vector.cpp  tests_lin_alg.h
tests/maros_meszaros/: AUG3D.mat  AUG3DQP.mat  BOYD1.mat  CONT-200.mat  CONT-201.mat  CVXQP1_L.mat  CVXQP2_L.mat  CVXQP3_M.mat  DUAL2.mat  DUAL3.mat  DUAL4.mat  DUALC5.mat  HS53.mat  KSIP.mat  LISWET5.mat  MOSARQP1.mat  MOSARQP2.mat  PRIMAL4.mat  QADLITTL.mat  QBANDM.mat  QBEACONF.mat  QBORE3D.mat  QE226.mat  QFORPLAN.mat  QPILOTNO.mat  QSC205.mat  QSCORPIO.mat  QSCSD8.mat  QSCTAP3.mat  QSTANDAT.mat  STADAT1.mat  YAO.mat
tests/no_active_set/: CMakeLists.txt  generate_problem.py  no_active_set_data.cpp  test_no_active_set.cpp  test_no_active_set.h
tests/non_cvx/: CMakeLists.txt  generate_problem.py  non_cvx_data.cpp  test_non_cvx.cpp  test_non_cvx.h
tests/pid_controller/: test_pid_rho_update.c
tests/primal_dual_infeasibility/: CMakeLists.txt  generate_problem.py  primal_dual_infeasibility_data.cpp  test_primal_dual_infeasibility.cpp  test_primal_dual_infeasibility.h
tests/primal_infeasibility/: CMakeLists.txt  generate_problem.py  primal_infeasibility_data.cpp  test_primal_infeasibility.cpp  test_primal_infeasibility.h
tests/python/: README.md  performance_profile_maros.py  tests.py
tests/settings/: CMakeLists.txt  test_settings.cpp
tests/solve_linsys/: CMakeLists.txt  generate_mat.jl  generate_problem.py  solve_linsys.h  solve_linsys_data.cpp  test_solve_linsys.h  tests_solve_linsys.h
tests/utils/: test_utils.h  (+3 more)
(+3166 files in other folders)
